
[*] Thu May 23 2002 - netcat (cvs)

  o Fixed the udp mode listen, which didn't allow any kind of safe read from
    stdin.
  o Generalized flagset.c to be more a library file.  Fixed some minor bugs
    in the interface.
  o Fixed a bug in ncprint() which didn't respect the EXIT flag if the
    verbosity flag was also specified and not satisfied.


[*] Wed May 15 2002 - netcat v0.4.0

  o Now netcat_socket_accept() recognizes a negative timeout parameter.
  o Splitted core functions like readwrite() to core.c, this allows a more
    modular programming and allows a better features-implementation.
  o Moved some low level code from main.c to core.c
  o Added UDP protocol support, but it is a little buggy still, because I have
    got some logistic problems to solve before fixing the implementation.
  o Fixed various socket leaks.
  o Reimplemented command line switch `-z' for TCP protocol.
  o Handled the listen mode-zero I/O case situation.
  o Port ranges now are recognized even in the form min:max
  o Fixed a bug in core_tcp_connect(), which didn't handle properly socket
    connection failures on very fast hosts (such as localhost).
  o Rewritten telnet support.  Now we have a more reliable implementation of
    the RFC0854.  Netcat will also rewrite the incoming buffer with the telnet
    codes stripped.
  o Updated doc/migration with new uncompatibilities found.
  o Added configure option `--enable-oldtelnet', which restores the old nc110
    telnet codes parsing policy.
  o Added configure option `--enable-compat', which turnes on ALL the other
    backwards compatibility switches.
  o Cleanup of the main header file and to the global environment.
  o First beta release!


[*] Thu May  9 2002 - netcat v0.3.1

  o Now "make install" also symlinks "nc" to the program file "netcat".
  o More careful use of stderr/stdout for printing messages
  o Updated file doc/migration
  o Now it is possible to force the local source port when connecting to